--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <span class="fs-2">Hi, <span class="secondery-text ">I'm</span></span>
                             <h1 class="gx-0 ">MOSTAFA MAHMOUD</h1>
                             <p class="my-3 col-md-8 m-auto"><span class="fs-5 px-1 fw-bold home-span">Front-end
-                                    Developer,</span> with knowledge in Web Development
+                                    Developer,</span> with a solid foundation in Web Development
                                 and its technologies, to deliver best projects and high-quality results.
                             </p>
                             <a href="Mostafa_Mahmoud.pdf" target="_blank" rel='noopener noreferrer' download>
@@ -154,7 +154,7 @@
                                 <span class="fs-5">|</span>
                                 <span class="fs-5 px-2"> Camp Coding </span>
                             </div>
-                            <p class="fs-5 px-2"> ( March 2024 - April 2024 ) </p>
+                            <p class="fs-5 px-2"> (March 2024 - April 2024) </p>
                             <div>
                                 <ul class="list text-start">
                                     <li class="skill-item py-1 ps-0"> Created multiple responsive web applications for
@@ -192,7 +192,7 @@
                         <div class="service-contain h-100 p-3 my-3 m-auto rounded-3 col-lg-5 col-md-10 col-12">
                             <i class="fa-solid secondery-text mb-1 fa-mobile-screen-button fs-3"></i>
                             <i class="fa-solid secondery-text mb-1 fa-display fs-3"></i>
-                            <h4 class="mb-4">RWD</h4>
+                            <h4 class="mb-4">Responsive Design</h4>
                             <p class="mb-0">
                                 Implementing fully responsive web applications that works highly efficient
                                 on every device
@@ -203,22 +203,22 @@
                         <h3 class="title text-center ">Technical <span class="secondery-text"> Skills </span></h3>
                         <div class="skill-list d-flex justify-content-center p-3">
                             <ul class="list">
-                                <li class="skill-item p-1">HTML</li>
-                                <li class="skill-item p-1">CSS</li>
+                                <li class="skill-item p-1">HTML & CSS</li>
                                 <li class="skill-item p-1">Tailwind CSS</li>
                                 <li class="skill-item p-1">Bootstrap</li>
                                 <li class="skill-item p-1">JavaScript</li>
                                 <li class="skill-item p-1">jQuery</li>
                                 <li class="skill-item p-1">Context</li>
+                                <li class="skill-item p-1">Redux</li>
                             </ul>
                             <ul class="list ">
-                                <li class="skill-item p-1">Redux</li>
                                 <li class="skill-item p-1">React.js</li>
                                 <li class="skill-item p-1">Next.js</li>
                                 <li class="skill-item p-1">REST API</li>
                                 <li class="skill-item p-1">TypeScript</li>
                                 <li class="skill-item p-1">Git</li>
                                 <li class="skill-item p-1">GitHub</li>
+                                <li class="skill-item p-1">Microsoft Office</li>
                             </ul>
                         </div>
                     </div>
