--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         content="Skilled Front-End Developer with a passion for creating stunning and user-friendly web applications. I am proficient in HTML, CSS, and JavaScript, and have experience with popular frameworks like React and Next.js. I am always eager to learn new technologies and improve my skills." />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/link.svg" />
+    <link rel="icon" href="images/link.svg">
     <link rel="stylesheet" href="CSS/bootstrap-icons.min.css">
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/all.min.css">
@@ -103,9 +103,9 @@
 
         <div class="page-2" id="about">
             <div class="container about">
-                <div class="title position-relative  d-flex justify-content-center align-items-center mb-5">
-                    <h2> About</h2>
-                    <h3 class=" position-absolute mt-3 fs-1"> About <span class="secondery-text"> Me </span></h3>
+                <div class="title position-relative d-flex justify-content-center align-items-center mb-5">
+                    <h2>About</h2>
+                    <h3 class="position-absolute mt-3 fs-1"> About <span class="secondery-text"> Me </span></h3>
                 </div>
                 <div class="row d-flex flex-md-nowrap align-items-center justify-content-center m-5  ">
                     <div
