--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                                 solutions. Strong foundation in frontend technologies.
                             </p>
                             <div class="mt-4">
-                                <a href="/Mostafa_Mahmoud.pdf" target="_blank" rel='noopener noreferrer'>
+                                <a href="https://drive.google.com/file/d/1rDiA_ctujMWmFdFENKmjycLDz3DJRMZz/view?usp=drive_link"
+                                    target="_blank" rel='noopener noreferrer'>
                                     <button type="button" class="btn btn-second my-3 mx-2">
-                                        Download Résumé
+                                        View Résumé
                                         <i class="fa-solid fa-sm fa-arrow-up fa-rotate-by"
                                             style="--fa-rotate-angle: 45deg;"></i>
                                     </button>
