--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         <div class="page-2" id="projects">
             <div class="container ">
-                <div class="title position-relative  d-flex justify-content-center align-items-center mb-5">
+                <div class="title position-relative d-flex justify-content-center align-items-center mb-5">
                     <h2>Projects</h2>
                     <h3 class=" position-absolute mt-3 fs-1"><span class="secondery-text"> My </span> Projects</h3>
                 </div>
@@ -167,7 +167,7 @@
                     <!-- wrapped in JS file -->
                 </div>
                 <div id="projectContainer"
-                    class="projects row col-11 d-flex align-items-center justify-content-center m-auto ">
+                    class="projects row col-11 d-flex align-items-center justify-content-md-start justify-content-center m-auto ms-md-auto ">
                     <!-- wrapped in JS file -->
                 </div>
             </div>
